--- a/WebContent/css/custom.css
+++ b/WebContent/css/custom.css
@@ -5,10 +5,10 @@
 *{
 	font-family: 'Nanum Gothic';
 }
-body{
+/* body{
   background-image: url("https://post-phinf.pstatic.net/MjAxNzAzMjdfMTY0/MDAxNDkwNTc2ODExNDQy.53oCxWZ0zWW3JvBWmOhkQQguVYe9lrH2MNnzd2hLWtQg.-ntAGaWH-WZ9-aUdQmuyfOezMGHc-qvMbzNpm_fKYqIg.JPEG/LG-CNS_%EB%B3%B4%EC%95%88_1.jpg?type=w1200");
   background-size:cover;
-}
+} */
 form{
 	background-color: white;
 }
